--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .header{
     width: 100%;
     height: 100px;
+    background-color: yellow;
 }
 
 /** {*/
@@ -8,15 +9,24 @@
 /*}*/
 
 .searchFilter{
-    height: 100%;
+    height: 1000px;
     float: left;
-    width: 20%;
+    width: 19%;
+    border-style: solid;
 }
 
 #content{
-    width: 80%;
+    width: 60.7%;
+    height: 1000px;
+    float: left;
+    border-style: solid;
+}
+
+.cartBar {
+    width: 19%;
     height: 1000px;
     float: right;
+    border-style: solid;
 }
 
 ul{
