--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@
     background-color: yellow;
 }
 
+.headerLogo {
+    font-size: 80px;
+    font-family: Arial;
+
+}
+
 /** {*/
     /*border: 1px solid red;*/
 /*}*/
@@ -17,7 +23,7 @@
 
 #content{
     width: 60%;
-    height: 1000px;
+    height: 100%;
     float: left;
     border-style: solid;
 }
@@ -28,6 +34,11 @@
     float: right;
     border-style: solid;
 }
+img {
+    float: left;
+    width: 150px;
+    height: 150px;
+}
 
 ul{
     list-style-type: none;
@@ -36,6 +47,7 @@ ul{
 #n1, #n2, #n3, #n4, #n5, #n6 {
     font-weight: bold;
     border: 1px black solid;
+    float: right;
 }
 
 #checkout {
