--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+    box-sizing: border-box;
+}
+
 .header{
     width: 100%;
     height: 150px;
@@ -6,34 +10,39 @@
 
 .headerLogo img {
     width:500px;
-
 }
-
-
-/** {*/
-    /*border: 1px solid red;*/
-/*}*/
 
 .searchFilter{
     height: 1000px;
     float: left;
     width: 19%;
     border-style: solid;
+    border-radius: 10px;
+    border-width: thin;
+    margin-top: 10px;
 }
 
 #content{
     width: 60%;
     height: 100%;
     float: left;
-    border-style: solid;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 #cartBar {
     width: 19%;
-    height: 1000px;
+    margin-top: 10px;
     float: right;
-    border-style: solid;
 }
+
+#cart {
+    border-style: solid;
+    border-radius: 10px;
+    border-width: thin;
+    height: 1200px;
+}
+
 img {
     float: left;
     width: 150px;
@@ -46,16 +55,42 @@ ul{
 
 .contentItems {
     font-weight: bold;
-    border: 1px black solid;
-    float: right;
+    border: black solid thin;
+    float: left;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    padding: 10px;
 }
-
 
 #checkout {
     width: 100%;
+    box-shadow:inset 0px 1px 0px 0px #97c4fe;
+    background-color:#3d94f6;
+    border-radius:6px;
+    border:1px solid #337fed;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #1570cd;
 }
 
 .cartItems {
     font-weight: bold;
-    border: 1px black solid;
+    border-bottom: 1px black solid;
+}
+
+#total {
+    font-weight: bold;
+    text-align: center;
+    background-color: lightgrey;
+    color: #E60109;
+    height: 30px;
+    border-radius:6px;
+    border:1px solid grey;
+    padding-top: 10px;
 }
