--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 html {
     box-sizing: border-box;
 }
@@ -9,21 +14,22 @@ html {
 }
 
 .headerLogo img {
-    width:500px;
+    width:450px;
 }
 
 .searchFilter{
     height: 1000px;
     float: left;
-    width: 19%;
-    border-style: solid;
-    border-radius: 10px;
-    border-width: thin;
+    width: 13%;
+    /*border-style: solid;*/
+    /*border-radius: 10px;*/
+    /*border-width: thin;*/
     margin-top: 10px;
+    margin-left: 10px;
 }
 
 #content{
-    width: 60%;
+    width: 64%;
     height: 100%;
     float: left;
     margin-left: 10px;
@@ -31,15 +37,16 @@ html {
 }
 
 #cartBar {
-    width: 19%;
+    width: 20%;
     margin-top: 10px;
     float: right;
+    margin-right: 10px;
 }
 
 #cart {
-    border-style: solid;
-    border-radius: 10px;
-    border-width: thin;
+    /*border-style: solid;*/
+    /*border-radius: 10px;*/
+    /*border-width: thin;*/
     height: 1200px;
 }
 
@@ -49,8 +56,22 @@ img {
     height: 150px;
 }
 
-ul{
+ul {
     list-style-type: none;
+}
+
+.searchFilter ul {
+    padding: 0;
+    font-weight: bold;
+    /*display: inline-block;*/
+    font-size: 20px;
+    line-height: 1.5;
+    cursor: pointer;
+}
+
+.searchFilter ul li:hover {
+    background-color: #FF8001;
+    color: white;
 }
 
 .contentItems {
@@ -71,7 +92,6 @@ ul{
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
-    font-family:Arial;
     font-size:15px;
     font-weight:bold;
     padding:6px 24px;
@@ -135,4 +155,9 @@ ul{
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+.is-active {
+    background-color: #FF8001;
+    color: white;
 }
