--- a/styles.css
+++ b/styles.css
@@ -163,8 +163,12 @@ ul {list-style-type: none;}
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    height: 200px;
-    width: 80%;
+    height: 500px;
+    width: 40%;
+}
+
+#modal-content div {
+    font-weight: bold;
 }
 
 /* The Close Button */
